# weberpagent

./: .env.example  .gitignore  CHECKPOINT_MESSAGE.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  echo  nginx.conf  npm  package-lock.json  package.json  pyproject.toml  task_template.xlsx
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.10.11-REQUIREMENTS.md  v0.10.11-ROADMAP.md  v0.10.9-REQUIREMENTS.md  v0.10.9-ROADMAP.md  v0.11.3-REQUIREMENTS.md  v0.11.3-ROADMAP.md  v0.2-MILESTONE-AUDIT.md  v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v0.3-REQUIREMENTS.md  v0.3-ROADMAP.md  v0.3.1-MILESTONE-AUDIT.md  v0.3.1-REQUIREMENTS.md  v0.3.1-ROADMAP.md  v0.3.2-REQUIREMENTS.md  v0.3.2-ROADMAP.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v0.4.1-MILESTONE-AUDIT.md  v0.4.1-REQUIREMENTS.md  v0.4.1-ROADMAP.md  v0.4.2-REQUIREMENTS.md  v0.6.3-REQUIREMENTS.md  v0.7.0-REQUIREMENTS.md  v0.7.0-ROADMAP.md  v0.8.1-REQUIREMENTS.md  v0.8.3-REQUIREMENTS.md  v0.8.3-ROADMAP.md  v0.9.0-REQUIREMENTS.md
.planning/optimization-notes/: formatted-input-handling.md
.planning/reports/: MILESTONE_SUMMARY-v0.8.4.md
.planning/research/: ARCHITECTURE-v0.8.4.md  ARCHITECTURE.md  CLOUD-STACK.md  FEATURES-v0.10.4.md  FEATURES.md  PITFALLS.md  STACK-v0.10.4.md  STACK.md  SUMMARY.md  Sr-Metrics.md
backend/: __init__.py  run_server.py
backend/_archived/: __init__.py
backend/agent/: __init__.py  action_utils.py  browser_agent.py  dom_patch.py  monitored_agent.py  pre_submit_guard.py  prompts.py  proxy_agent.py  stall_detector.py  task_progress_tracker.py
backend/agent_simple/: __init__.py  agent.py  decision.py  executor.py  perception.py  prompts.py  types.py
backend/api/: __init__.py  helpers.py  main.py  response.py
backend/config/: settings.py  test_targets.yaml  validators.py
backend/core/: __init__.py  account_service.py  action_translator.py  agent_service.py  api_assertion_service.py  assertion_service.py  auth_service.py  auth_session_factory.py  batch_execution.py  cache_service.py  code_generator.py  error_classifier.py  error_utils.py  event_manager.py  excel_fill_service.py  external_execution_engine.py  external_method_discovery.py  external_module_loader.py  external_precondition_bridge.py  healer_error.py  llm_healer.py  locator_chain_builder.py  precondition_service.py  random_generators.py  report_service.py  self_healing_runner.py  step_code_buffer.py  test_flow_service.py  time_utils.py
backend/data/: database.db  tasks.json
backend/db/: __init__.py  database.py  models.py  (+2 more)
config/: llm_config.yaml
docs/: 1_后端主计划.md  2_前端主计划.md  Browser-use计划.md  README.md  browser-mode-analysis.md  deployment.md  manual-test-checklist.md  progress.md  task_template.xlsx  ~$销售出库测试用例.xlsx  断言系统使用指南.md  测试模版.xlsx  测试步骤.md  销售出库测试用例.xlsx
e2e/: playwright.config.ts
frontend/: .env.development  .env.example  1,  package-lock.json  package.json  tailwind.config.js  vite.config.ts
outputs/: validation_report.json  validation_report_azure.json
pencil_image/: pencil-new.pen
playwright-report/: index.html
test-results/: .last-run.json
webseleniumerp/: .gitignore  __init__.py  check_duplicate_urls.py  export_the_use_case.py  grammar_error_checking.py  main.py  run_testcase.py  testcase_export.xlsx  use_compare_elem_key.py  use_match_key.py  use_testcase_number.py  use_testcase_statics_num.py
(+1367 files in other folders)
