[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "aiDriveUITest"
version = "0.1.0"
description = "AI + Playwright UI 自动化测试 POC"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.2",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "playwright>=1.40.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "pydantic>=2.4.0",  # >=2.4.0 to avoid CVE-2024-3772
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
    "dashscope>=1.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.6",
    "nest_asyncio>=1.5.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
