[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "aiDriveUITest"
version = "0.1.0"
description = "AI + Playwright UI 自动化测试 POC"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.2",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "playwright>=1.40.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "pydantic>=2.4.0",  # >=2.4.0 to avoid CVE-2024-3772
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
    "dashscope>=1.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.6",
    "nest_asyncio>=1.5.0",
    "openpyxl>=3.1.5",
    # webseleniumerp external module dependencies
    "gevent>=24.0.0",
    "pyperclip>=1.9.0",
    "selenium>=4.20.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "portalocker>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
    "pytest-html>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
